新增:hexo-wordcount实现统计功能;新增:leancloud阅读次数统计.

--- a/themes/next0/_config.yml
+++ b/themes/next0/_config.yml
@@ -230,9 +230,9 @@ post_meta:
 # Dependencies: https://github.com/willin/hexo-wordcount
 post_wordcount:
   item_text: true
-  wordcount: false
-  min2read: false
-  totalcount: false
+  wordcount: true
+  min2read: true
+  totalcount: true
   separated_meta: true
 
 # Wechat Subscriber
@@ -532,8 +532,8 @@ rating:
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
   enable: true
-  app_id: #<app_id>
-  app_key: #<app_key>
+  app_id: YRSSAccpDIzPrtMe3yCHKjSc-gzGzoHsz
+  app_key: Ff4VQfe423rTWG46ka2WAAmu
 
 # Another tool to show number of visitors to each article.
 # visit https://console.firebase.google.com/u/0/ to get apiKey and projectId
